# poly-csp

./: .gitignore  README.md  environment.yml  pyproject.toml
conf/: config.yaml
docs/: backbone_geometry.md  csp_construction_report.md  csp_construction_ticket_stages_1_3.md  csp_construction_workflow_staged_implementation_plan.md  hydrogen_handling.md  implementation_plan.md  implict_solvent_consideratins.md  metadata_invariants.md  parallel_runs.md  project_review.md  solvent_simulation_handoff.md
scripts/: generate_seeded_runtime_assets.py
tests/: support.py  test_35dmpc_template.py  test_amber_backend.py  test_anneal_step_accounting.py  test_atom_mapping.py  test_attach_selector_sites.py  test_backbone_helical_coords.py  test_bonded_relaxation_system.py  test_carbamate_geometry.py  test_connectors.py  test_dihedral_setting.py  test_dmpc_35_template.py  test_exceptions.py  test_fast_distance.py  test_forcefield_model.py  test_fragment_charges.py  test_glycam_assembly.py  test_hbond_metrics_geometric.py  test_hbonds.py  test_helix_spec.py  test_hydrogens.py  test_imports.py  test_monomer_template.py  test_multi_opt.py  test_openmm_io.py  test_optional_import_guards.py  test_ordering_forcefield.py  test_ordering_objective_consistency.py  test_pdb_residue_info.py  test_periodic_handoff.py  test_pipeline_config_groups.py  test_pipeline_end_modes.py  test_pipeline_glycam_runtime.py  test_pipeline_ordering.py  test_pipeline_relax_and_amber.py  test_polymerize_topology.py  test_reactions.py  test_relaxation.py  test_representation_and_terminals.py  test_rotamers.py  (+12 more)
(+104 files in other folders)
